# LocalGamepad-Server

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/controller/: controller.h  controller_conversion.h  controller_conversions.h  controller_offsets.h
include/udp_server/: udp_client.h  udp_server.h
src/controller/: controller.cpp  controller_conversion.cpp  controller_conversions.cpp
src/udp_server/: udp_client.cpp  udp_server.cpp
